--- a/css/style.css
+++ b/css/style.css
@@ -8284,7 +8284,7 @@ h1, h2, h3, h4, h5,
     height: 400px; }
     .hero-wrap.hero-wrap-2 .overlay {
       opacity: .6;
-      background: #1b96a1; }
+      background: #041f4b; }
     .hero-wrap.hero-wrap-2 .slider-text {
       height: 400px; }
       .hero-wrap.hero-wrap-2 .slider-text h1 {
